--- a/bobby/index.html
+++ b/bobby/index.html
@@ -175,8 +175,8 @@
 									Toronto, Ontario
 								</li>
 
-								<li class="icon solid fa-envelope"><a href="#">bizarregenius@icloud.com</a></li>
-								<li class="icon brands fa-twitter"><a href="#">https://twitter.com/OlympianTychi</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:bizarregenius@icloud.com">Email me</a></li>
+								<li class="icon brands fa-twitter"><a href="https://twitter.com/OlympianTychi">Follow me on Twitter!</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">https://www.facebook.com/aetos.salos/</a></li>
 								<li class="icon brands fa-instagram"><a href="#">https://www.instagram.com/bobbypapoutsis/</a></li>
 							</ul>
