--- a/ebreo/index.html
+++ b/ebreo/index.html
@@ -94,7 +94,7 @@
 										<article>
 											<audio controls>
 												<source src="audio/Sonic Essay (Finalized Version).mp3" type="audio/mp3">
-											</audio> 
+											</audio>
 											<h3>My History with Digital Audiences</h3>
 											<p>Audience has always been an important part of how we understand and create content. By understanding your audience behaves, you can curate content by acknowledging their needs and their wants.</p>
 											<ul class="actions">
@@ -104,7 +104,7 @@
 										<article>
 											<iframe width="420" height="315"
 											src="https://www.youtube.com/embed/cOGcsxB_Cbw">
-											</iframe> 
+											</iframe>
 											<h3>How I Use Archive of Our Own</h3>
 											<p>Archive of Our Own, or AO3, is one of the top fanfiction websites on the internet today. However, there are a few nuances to how one uses AO3 to both curate content for certain audiences as well as how to look for good content as a member of the audience.</p>
 											<ul class="actions">
@@ -121,12 +121,30 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/Cupcakes Pinkie Pie.jpg" alt="" /></a>
-											<h3>Cupcakes</h3>
-											<p>If you were to ever bring up the word “Cupcakes” to any Brony or <i>My Little Pony</i> fan, there’s a likely chance that they’re going to reel back and tell you to never say that word again. Thus is the power of Cupcakes on general community discourse.</p>
-											<p>Image Credit: Drecker Jones AKA Captain Sprinkles on DeviantArt</p>
+											<a href="#" class="image"><img src="images/Bumblebee Fluff.jfif" alt="" /></a>
+											<h3>Fluff</h3>
+											<p>Fluff is a term used in writing to refer to unnecessary details in a story. Fans and fandom culture, however, have taken this term and devised it into its own genre. But how has a term taken out of its intended method and context changed it as a trope?</p>
+											<p>Image Credit: TheOrangeTanuki on Twitter</p>
 											<ul class="actions">
-												<li><a href="file:///C:/Users/jonel/Documents/Digital%20Authoring%20Web%20Design%20Stuff/Fanfiction%20Article%20-%20Cupcakes.html" class="button">More</a></li>
+												<li><a href="file:///C:/Users/jonel/Documents/Digital%20Authoring%20Web%20Design%20Stuff/Trope%20Article%20-%20Fluff.html" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/Bumblebee Fluff.jfif" alt="" /></a>
+											<h3>Fluff</h3>
+											<p>Fluff is a term used in writing to refer to unnecessary details in a story. Fans and fandom culture, however, have taken this term and devised it into its own genre. But how has a term taken out of its intended method and context changed it as a trope?</p>
+											<p>Image Credit: TheOrangeTanuki on Twitter</p>
+											<ul class="actions">
+												<li><a href="file:///C:/Users/jonel/Documents/Digital%20Authoring%20Web%20Design%20Stuff/Trope%20Article%20-%20Fluff.html" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/Bumblebee Fluff.jfif" alt="" /></a>
+											<h3>Fluff</h3>
+											<p>Fluff is a term used in writing to refer to unnecessary details in a story. Fans and fandom culture, however, have taken this term and devised it into its own genre. But how has a term taken out of its intended method and context changed it as a trope?</p>
+											<p>Image Credit: TheOrangeTanuki on Twitter</p>
+											<ul class="actions">
+												<li><a href="file:///C:/Users/jonel/Documents/Digital%20Authoring%20Web%20Design%20Stuff/Trope%20Article%20-%20Fluff.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -163,12 +181,12 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="generic.html">Featured</a></li>
-										<li><a href="file:///C:/Users/jonel/Documents/Digital%20Authoring%20Web%20Design%20Stuff/Sonic%20Essay%20-%20Full%20Transcript.html#">Sonic Essay</a></li>
-										<li><a href="file:///C:/Users/jonel/Documents/Digital%20Authoring%20Web%20Design%20Stuff/Video%20Essay%20-%20Full%20Transcript.html">Video Essay</a></li>
+										<li><a href="Sonic Essay - Full Transcript.html">Sonic Essay</a></li>
+										<li><a href="Video Essay - Full Transcript.html">Video Essay</a></li>
 										<li>
 											<span class="opener">Fanfiction</span>
 											<ul>
-												<li><a href="file:///C:/Users/jonel/Documents/Digital%20Authoring%20Web%20Design%20Stuff/Fanfiction%20Article%20-%20Cupcakes.html">Cupcakes</a></li>
+												<li><a href="">Cupcakes</a></li>
 												<li><a href="#">The Draco Trilogy</a></li>
 												<li><a href="#">The Subspace Emissary's World Conquest</a></li>
 												<li><a href="#">Fallout Equestria</a></li>
@@ -177,7 +195,7 @@
 										<li>
 											<span class="opener">Tropes</span>
 											<ul>
-												<li><a href="file:///C:/Users/jonel/Documents/Digital%20Authoring%20Web%20Design%20Stuff/Trope%20Article%20-%20Fluff.html">Fluff</a></li>
+												<li><a href="">Fluff</a></li>
 												<li><a href="#">Leather Pants Draco</a></li>
 												<li><a href="#">Crossovers</a></li>
 												<li><a href="#">The Mary Sue</a></li>
@@ -199,7 +217,7 @@
 												<li><a href="#">Barchie vs. Varchie</a></li>
 												<li><a href="#">Brason</a></li>
 											</ul>
-										</li>	
+										</li>
 										<li><a href="#">About Us</a></li>
 									</ul>
 								</nav>
@@ -211,9 +229,9 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="file:///C:/Users/jonel/Documents/Digital%20Authoring%20Web%20Design%20Stuff/Fanfiction%20Article%20-%20Cupcakes.html" class="image"><img src="images/Cupcakes Pinkie Pie.jpg" alt="" /></a>
-											<h4>Cupcakes</h4>
-											<p>Image Credit: Drecker Jones AKA Captain Sprinkles</p>
+											<a href="file:///C:/Users/jonel/Documents/Digital%20Authoring%20Web%20Design%20Stuff/Trope%20Article%20-%20Fluff.html" class="image"><img src="images/Bumblebee Fluff.jfif" alt="" /></a>
+											<h4>Fluff</h4>
+											<p>Image Credit: TheOrangeTanuki</p>
 										</article>
 										<article>
 											<a href="file:///C:/Users/jonel/Documents/Digital%20Authoring%20Web%20Design%20Stuff/Trope%20Article%20-%20Fluff.html" class="image"><img src="images/Bumblebee Fluff.jfif" alt="" /></a>
