--- a/morgan/index.html
+++ b/morgan/index.html
@@ -22,6 +22,8 @@
 					<p>Welcome to one of many digital spaces on <em>Web 2.0 </em>. </br> In this space, we will explore a story about recognizing the self as a cyberwriter multimodally.</p>
 					<ul class="actions special">
 						<li><a href="#three" class="button scrolly">Enter</a></li>
+												<li><a href="#three" class="button scrolly">Enter</a></li>
+																		<li><a href="#three" class="button scrolly">Enter</a></li>
 					</ul>
 				</div>
 			</section>
