--- a/jacome/index.html
+++ b/jacome/index.html
@@ -209,7 +209,7 @@
 					</div>
 				</section>
 
-			<!-- Footer -->
+			<!-- Footer 
 				<section id="footer">
 					<div class="container">
 						<div class="row">
@@ -328,7 +328,7 @@
 								</section>
 							</div>
 							<div class="col-12">
-
+-->
 								<!-- Copyright -->
 									<div id="copyright">
 										<ul class="links">
