--- a/nowak/index.html
+++ b/nowak/index.html
@@ -35,7 +35,7 @@
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
-						<span class="image main"><img src="images/header.jpg" alt="" /></span>
+						<span class="image main"><img src="images/Header.jpg" alt="" /></span>
 					</header>
 
 				<!-- Main -->
@@ -47,7 +47,7 @@
 								<span class="image main"><img src="images/1.jpg" alt="" /></span>
 								<p>My name is Natalia. I don’t call myself an artist, I don’t call myself a writer. I’m both. My art is my creative outlet for my writing, and I post my writing on Instagram. Instagram has been heavily embedded in my life for a few years. Needless to say, I’m quite obsessed with scrolling through memes and receiving likes. I have chosen to focus my projects on Instagram because it is how I most often where I share my digital writing. This website is dedicated to two of my projects featuring Instagram as the headliner. I have created a sonic essay describing my journey with Instagram and its purpose in my digital journey. The second project I have created is a video essay of the same sonic essay. Of course, the video is tweaked, shortened, and manipulated to match the visual elements. In the video you will see my creative process, how I interact with Instagram, and how I evolve my work to match the Instagram interface. </p>
 								<p>Thanks for stopping by. Start listening to my sonic essay <a href="#listen">here</a>.</p>
-								<span class="image main"><img src="images/gallery2.jpg" alt="" /></span>
+								<span class="image main"><img src="images/Gallery2.jpg" alt="" /></span>
 							</article>
 
 						<!-- listen -->
