--- a/mitange/elements.html
+++ b/mitange/elements.html
@@ -49,7 +49,7 @@
 
 
 									<p><video controls="controls" width="600" height="300">
-                   <source src="Final%20Video%20Sonic%20Essay.mp4" type="video/mp4"/><p>
+                   <source src="images/Final%20Video%20Sonic%20Essay.mp4" type="video/mp4"/><p>
 
 									<!-- Content -->
 													</div>
