--- a/urican/index.html
+++ b/urican/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="/Users/lorena/Desktop/urican/images/turtle 2.png" alt="" /></span>
+						<span class="logo"><img src="images/turtle 2.png" alt="" /></span>
 						<h1><strong>Lorena Urican</strong></h1>
 						<p></p>
 					</header>
@@ -49,7 +49,7 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="/Users/lorena/Desktop/urican/images/dan-farrell-FnR2U1lXsBQ-unsplash.jpg" alt="" /></span>
+									<span class="image"><img src="images/dan-farrell-FnR2U1lXsBQ-unsplash.jpg" alt="" /></span>
 								</div>
 							</section>
 
