--- a/nowak/index.html
+++ b/nowak/index.html
@@ -44,10 +44,10 @@
 						<!-- about -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/1.jpg" alt="" /></span>
+								<img src="images/1.jpg" alt="" />
 								<p>My name is Natalia. I don’t call myself an artist, I don’t call myself a writer. I’m both. My art is my creative outlet for my writing, and I post my writing on Instagram. Instagram has been heavily embedded in my life for a few years. Needless to say, I’m quite obsessed with scrolling through memes and receiving likes. I have chosen to focus my projects on Instagram because it is how I most often where I share my digital writing. This website is dedicated to two of my projects featuring Instagram as the headliner. I have created a sonic essay describing my journey with Instagram and its purpose in my digital journey. The second project I have created is a video essay of the same sonic essay. Of course, the video is tweaked, shortened, and manipulated to match the visual elements. In the video you will see my creative process, how I interact with Instagram, and how I evolve my work to match the Instagram interface. </p>
 								<p>Thanks for stopping by. Start listening to my sonic essay <a href="#listen">here</a>.</p>
-								<span class="image main"><img src="images/gallery2.jpg" alt="" /></span>
+								<img src="images/gallery2.jpg" alt="" />
 							</article>
 
 						<!-- listen -->
@@ -58,7 +58,7 @@
 								<p></p>
 								<p>I’ll start by being perfectly honest, I do not consider myself a writer, I may have my strengths here and there, but story-writing, poetry, and non-fiction are not my strengths by far.</p>
 								<p>So, rather than focusing on the traditional definition of “writing” and “to write” I’ll be focusing on what the purpose of writing is in the first place, which I believe everyone can agree, is to get a message across. That message can be anything we want, but for something to be considered well-written, that message should be easily understood (for the most part). For those who are not apart of an art community on Instagram, Instagram is a source of memes, products, pictures, and unwarranted advice from self-proclaimed specialists. However, there are communities that exist that are genuinely good and non-toxic forms of social media.</p>
-								<span class="image main"><img src="images/artist.jpg" alt="" /></span>
+								<img src="images/artist.jpg" alt="" />
 								<p>Instagram is my platform of choice for getting my message across, not via written media, but through art. Of course, the majority of artists post their artwork to gain traction, fame, followers, I won’t deny that this hasn’t also been one of my goals; however, my true focus has always been to promote what I feel is important. For me, Instagram is an outlet where I can share the importance of the feminist outlook, exposing instances of injustice and inequity, and sharing my art to promote equality amongst all living beings.</p>
 								<p>Instagram is a platform I have used to share my artwork in a safe environment with followers who want to see my work. The platform also allows me to engage with my audience, ask them what I should focus on next, which video are they looking for, what colours should I use, and so on. Audience feedback of this scale and quickness cannot be easily achieved with other media. I could showcase my work in a gallery, the handful of people who are likely to see my work will not know the process I went through to create it, and if they do not follow me on Instagram already, they probably don’t care.</p>
 								<span class="image main"><img src="images/gallery.jpg" alt="" /></span>
@@ -74,7 +74,7 @@
 								<p><em>“Vinyl Needle Scratch” Sound from Zapslat.com</em></p>
 		</article>
 								<div>
-								<span class="image main"><img src="images/2.jpg" alt="" /></span>
+								<img src="images/2.jpg" alt="" />
 								<p>Check out how I create my <a href="#watch">Instagram content</a>.</p>
 </div>
 
@@ -96,7 +96,7 @@
 								<h4>Sounds</h4>
 								<p><em>“Money, Coins Drop” Sound from Zapslat.com</em>
 								<p></p>
-								<span class="image main"><img src="images/artist2.jpg" alt="" /></span>
+								<img src="images/artist2.jpg" alt="" />
 								<p>Want to know more about <a href="#about">Me</a>?</p>
 							</article>
 
