--- a/nowak/index.html
+++ b/nowak/index.html
@@ -35,7 +35,7 @@
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
-						<span class="image main"><img src="images/header.jpg" alt="" /></span>
+						<span class="image main"><img src="images/header.jpg" alt=""></span>
 					</header>
 
 				<!-- Main -->
@@ -44,7 +44,7 @@
 						<!-- about -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/1.jpg" alt="" /></span>
+								<span class="image main"><img src="images/1.jpg" alt=""></span>
 								<p>My name is Natalia. I don’t call myself an artist, I don’t call myself a writer. I’m both. My art is my creative outlet for my writing, and I post my writing on Instagram. Instagram has been heavily embedded in my life for a few years. Needless to say, I’m quite obsessed with scrolling through memes and receiving likes. I have chosen to focus my projects on Instagram because it is how I most often where I share my digital writing. This website is dedicated to two of my projects featuring Instagram as the headliner. I have created a sonic essay describing my journey with Instagram and its purpose in my digital journey. The second project I have created is a video essay of the same sonic essay. Of course, the video is tweaked, shortened, and manipulated to match the visual elements. In the video you will see my creative process, how I interact with Instagram, and how I evolve my work to match the Instagram interface. </p>
 								<p>Thanks for stopping by. Start listening to my sonic essay <a href="#listen">here</a>.</p>
 								<span class="image main"><img src="images/gallery2.jpg" alt="" ></span>
@@ -61,7 +61,7 @@
 								<span class="image main"><img src="images/artist.jpg" alt="" /></span>
 								<p>Instagram is my platform of choice for getting my message across, not via written media, but through art. Of course, the majority of artists post their artwork to gain traction, fame, followers, I won’t deny that this hasn’t also been one of my goals; however, my true focus has always been to promote what I feel is important. For me, Instagram is an outlet where I can share the importance of the feminist outlook, exposing instances of injustice and inequity, and sharing my art to promote equality amongst all living beings.</p>
 								<p>Instagram is a platform I have used to share my artwork in a safe environment with followers who want to see my work. The platform also allows me to engage with my audience, ask them what I should focus on next, which video are they looking for, what colours should I use, and so on. Audience feedback of this scale and quickness cannot be easily achieved with other media. I could showcase my work in a gallery, the handful of people who are likely to see my work will not know the process I went through to create it, and if they do not follow me on Instagram already, they probably don’t care.</p>
-								<span class="image main"><img src="images/gallery.jpg" alt="" /></span>
+								<span class="image main"><img src="images/gallery.jpg" alt=""></span>
 								<p>Today, most young people and new artists are obsessively seeking the process of art. Not many are interested in the final product anymore, the art process itself <em>is</em> art. Why? Because the artist is now capable of teaching as they create, they are able to showcase how long the process was, how difficult, how costly -this has never before been seen in the past -and that is why we are so attracted to it.</p>
 								<p>For me, Instagram is an outlet where I can connect with my audience and present my “writing” process. As I develop my message and prepare the final product, I am constantly engaged with my followers. I seek their input as I create, and the feedback is thrilling and motivational -it is most often what keeps me going. Although I may be preaching in Instagram’s favour, it is not all good. The main problem artists face is the ever-changing Instagram timeline and interface. It seems many artists are not able to reach their followers like they used to, their work is not even appearing on the timelines of their followers, and artists are no longer in the public eye as easily as they once were. So now I ask, where can we go next when the biggest conglomerate is pushing us out?</p>
 								<h4>Music</h4>
