--- a/dean/sonic.html
+++ b/dean/sonic.html
@@ -43,7 +43,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Sonic Essay</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="" alt="" /></span>
 								<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1239792121&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dean-wardak" title="Dean Wardak" target="_blank" style="color: #cccccc; text-decoration: none;">Dean Wardak</a> · <a href="https://soundcloud.com/dean-wardak/sonic-essay-revised" title="Sonic Essay revised" target="_blank" style="color: #cccccc; text-decoration: none;">Sonic Essay</a></div>
 							<p>(Piano and drums start playing) 
 	Welcome to Dean Wardak’s sonic essay.
