--- a/dean/index.html
+++ b/dean/index.html
@@ -51,7 +51,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/deanerlogo.JPG" alt="" />
+										<img src="images/deanerlogo.jpg" alt="" />
 									</span>
 									<a href="sonic.html">
 										<h2>Dean's Sonic Essay</h2>
