--- a/livingdigitalmedia/index.html
+++ b/livingdigitalmedia/index.html
@@ -141,7 +141,7 @@
 								<article>
 									<header>
                                         	<span class="date">Chapter One</span>
-										<h2><a href="chapterone.html">Feeling Digital Scholarship</a></h2>
+										<h2><a href="chapterone.html">Feeling<br> Digital Scholarship</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="media/pexels-sora-shimazaki-5926389.jpg" width="508" height="310"alt="Cropped photo of unrecognizable developer using laptop and smartphone" /></a>
 									<p>This chapter begins with an extensive discussion of scholars who have experimented and created with digital media in the last five years. </p>
@@ -165,9 +165,8 @@
 										<span class="date">Chapter Three</span>
 										<h2><a href="#">Feeling Collaboration</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="media/pexels-cottonbro-4705635.jpg" alt="Person holding black and white electronic device and other people working on computer" width="508" height="310" /></a>
+									<a href="http://hakim.se" class="image fit"><img src="media/pexels-cottonbro-4705635.jpg" alt="Person holding black and white electronic device and other people working on computer" width="508" height="310" /></a>
 									<p>This chapter centres on the significance of bodies in proximity, whether with content collaborators in work spaces or public audiences at conferences. </p>
-                                    <a href="http://hakim.se" data-preview-link>Hakim El Hattab</a>
 
 									<ul class="actions special">
 										<li><a href="#" class="button">Read the Chapter</a></li>
