--- a/livingdigitalmedia/introduction_parttwo.html
+++ b/livingdigitalmedia/introduction_parttwo.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Feeling Digital Media - Introduction</title>
+		<title>Feeling Digital Media - Introduction, Part Two</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,9 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Feeling<br />
+						<h1>Living<br />
 						Digital media</h1>
-						<p>The Rhetorical-Affective Practices of Experimental Creators</p>
+						<p>Subtitle Forthcoming</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Feeling digital media</a>
+						<a href="index.html" class="logo">Living digital media</a>
 					</header>
 
 				<!-- Nav -->
@@ -158,7 +158,7 @@
 
 						<!-- Footer -->
 							<footer>
-    										<a href="introduction_parttwo.html" class="button">To the Top</a>
+    										<a href="chapterone.html" class="button">To Chapter One</a>
     </footer>
 				
 
