Trying out stuff!

--- a/livingdigitalmedia/index.html
+++ b/livingdigitalmedia/index.html
@@ -134,14 +134,14 @@
 									<a href="#" class="image fit"><img src="media/pexels-sora-shimazaki-5926389.jpg" width="508" height="310"alt="Cropped photo of unrecognizable developer using laptop and smartphone" /></a>
 									<p>This chapter discusses the exigencies of Feeling Digital Media and introduces theories and stories in the book. </p>
 									<ul class="actions special">
-										<li><a href="introduction.html" class="button">Read the Introduction</a></li>
-                                        			<li><a href="introduction.html" class="button">Part Two of the Intro</a></li>
+										<li><a href="introduction.html" class="button">Read the Introduction</a><br><br><a href="introduction.html" class="button">Part Two of the Intro</a></li>
+                                        		
 									</ul>
 								</article>
 								<article>
 									<header>
                                         	<span class="date">Chapter One</span>
-										<h2><a href="chapterone.html">Feeling<br> Digital Scholarship</a></h2>
+										<h2><a href="chapterone.html">Living<br> Webtexts</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="media/pexels-sora-shimazaki-5926389.jpg" width="508" height="310"alt="Cropped photo of unrecognizable developer using laptop and smartphone" /></a>
 									<p>This chapter begins with an extensive discussion of scholars who have experimented and created with digital media in the last five years. </p>
@@ -152,10 +152,10 @@
 								<article>
 									<header>
 	<span class="date">Chapter Two</span>
-										<h2><a href="#">Feeling <br>Feedback</a></h2>
+										<h2><a href="#">Living <br>Collaboration</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="media/pexels-soumil-kumar-735911.jpg" alt="Photo of person typing on computer keyboard" width="508" height="310" /></a>
-									<p>This chapter entwines stories of scholarly and industry creators who spoke at length about composing in real-time with public audiences.</p>
+								 <p>This chapter centres on the significance of bodies in proximity, whether with collaborators in physical work spaces or digital communication channels. </p>
 									<ul class="actions special">
 										<li><a href="chaptertwo.html" class="button">Read the Chapter</a></li>
 									</ul>
@@ -163,10 +163,11 @@
 								<article>
 									<header>
 										<span class="date">Chapter Three</span>
-										<h2><a href="#">Feeling Collaboration</a></h2>
+										<h2><a href="chapterthree.html">Living Revision</a></h2>
 									</header>
 									<a href="http://hakim.se" class="image fit"><img src="media/pexels-cottonbro-4705635.jpg" alt="Person holding black and white electronic device and other people working on computer" width="508" height="310" /></a>
-									<p>This chapter centres on the significance of bodies in proximity, whether with content collaborators in work spaces or public audiences at conferences. </p>
+										<p>This chapter entwines stories of scholarly and industry creators who spoke at length about composing and revising work in real-time with online audiences.</p>
+                                   
 
 									<ul class="actions special">
 										<li><a href="#" class="button">Read the Chapter</a></li>
@@ -175,32 +176,32 @@
 								<article>
 									<header>
 										<span class="date">Chapter Four</span>
-										<h2><a href="#">Feeling Circulation</a></h2>
+										<h2><a href="#">Living Delivery</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="media/bambi-corro-nqRGWfooOCk-unsplash-2.jpg" alt="Orange and black spiral light painting" width="508" height="310" /></a>
-									<p>This chapter tells stories of living digital media, of creators who serialize and continuedly update their digital work long after its initial delivery. </p>
+									<p>This chapter tells stories of living digital media when delivered, of creators who constantly update their digital work long after its initial delivery or sustain it for future audiences. </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Read the Chapter</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">Chapter Five</span>
-										<h2><a href="#">Feeling Deep Embodiment</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="media/pexels-cottonbro-5090652.jpg" alt="" width="508" height="310" /></a>
-									<p>The results of my own rhetorical-affective practices based on composing this book under the live stream "100 Days of Writing." </p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Read the Chapter</a></li>
+										<li><a href="chapterfour.html" class="button">Read the Chapter</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">Conclusion</span>
-										<h2><a href="#">Feeling Future Practices</a></h2>
+										<h2><a href="#">A Living Conclusion</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="media/pexels-cottonbro-5090652.jpg" alt="" width="508" height="310" /></a>
+									<p>X</p>
+									<ul class="actions special">
+										<li><a href="conclusion.html" class="button">Read the Chapter</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date"></span>
+										<h2><a href="#">References</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="media/pexels-mikhail-nilov-7709020.jpg" alt="Person's hand reaching out to a light" width="508" height="310" /></a>
-									<p>This chapter presents a revision of the rhetorical-affective theory framed in the Introduction and Chapter One, later turning to future research questions.</p>
+									<p>X</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Read the Chapter</a></li>
 									</ul>
