Messing with CSS for a two-column approach for the page TOCs.

--- a/livingdigitalmedia/index.html
+++ b/livingdigitalmedia/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<!--Hey there! Welcome to the hidden comments of Feeling Digital Media. These comments aren't visible in the book's front-facing pages--just here. My goal is to leave helpful hints and time-stamped notes about the book's technical parts, mainly anyone who wants to build on, remix, or teach with any parts of this book's design. To me, this is a way to showing what's under the technical hood as well as explaning what's there. Comments like these have been helpful for students in my digital media courses. Good luck!-->
+<!--Hey there! Welcome to the hidden comments of Living Digital Media. These comments aren't visible in the book's front-facing pages--just here. My goal is to leave helpful hints and time-stamped notes about the book's technical parts, mainly anyone who wants to build on, remix, or teach with any parts of this book's design. To me, this is a way to showing what's under the technical hood as well as explaning what's there. Comments like these have been helpful for students in my digital media courses. Good luck!-->
 
 <html>
 	<head>
