--- a/livingdigitalmedia/index.html
+++ b/livingdigitalmedia/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
+This web project is based on the template "Massively" by HTML5 UP.
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -23,7 +23,7 @@
 					<div id="intro">
 						<h1>Living<br />
 						Digital media</h1>
-						<p>The Rhetorical-Affective Practices of Experimental Creators.</p>
+						<p>Theorizing rhetorical-affective practices in webtexts and games production cycles</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -35,7 +35,7 @@
 					</header>
 
 				<!-- Nav -->
-                <!-- Note to self in 2020: I think I'll try to keep each chapter's text at about 2,000-2,500 words. Combined with multimedia, I don't think it will seem short. Also, where to put the production notes? Also, I wonder if I make this click and drag? Necessary? Or maybe a filter here? https://www.w3schools.com/howto/howto_js_filter_elements.asp-->
+                <!-- Note to self in 2020: I think I'll try to keep each chapter's text at about 2,000-2,500 words. Combined with multimedia, I don't think it will seem short. Also, where to put the production notes? Also, I wonder if I make this click and drag? Necessary? Or maybe a filter here? https://www.w3schools.com/howto/howto-js-filter-elements.asp-->
                 <!--2022: The following area (approx. line 39-102) is the navigation bar and table of contents available on each page of the book. This navigation bar is a variation on the original "Massively" template. The original template rests at the top of each page and transforms into an expandable sidebar when the page is smaller (e.g., on a mobile browser). I revised it so that the navigation sticks to the top right of the page and expands when clicked on. In addition, I added a script that allows readers to click on "Navigation Options" and read only the "Ephemera" sections. Overall, this coding was a total pain...in...the...butt, but the navigation bar now feels like my own design.--> 
 
 						<nav id="nav">
@@ -48,16 +48,16 @@
         <li><a href="introduction.html">Introduction: Rhetorical Practices in the Now</a></li>
                             <li><a href="introduction.html"> Introduction, Part Two: Affective Terms and Felt Conditions</a></li>
 							<li><a href="chapterone.html"><i class="fas fa-file-audio"></i>Chapter 1: Feeling Digital Scholarship</a></li>
-                            <li><a href="chapterone_parttwo.html"><i class="fas fa-file-audio"></i>Chapter 1.2: Reception Woes</a></li>
-                            <li><a href="chapterone_partthree.html">Chapter 1.3: Collaboration: Embodied Intensities</a></li>
-                            <li><a href="chapterone_partfour.html">Chapter 1.4: Calling for More Creator Stories: Toward Game Devs and Comics Creators</a></li>
-                            <li><a href="chapterone_ephemera.html">Ephemera: Chapter One</a></li>
+                            <li><a href="chapterone-parttwo.html"><i class="fas fa-file-audio"></i>Chapter 1.2: Reception Woes</a></li>
+                            <li><a href="chapterone-partthree.html">Chapter 1.3: Collaboration: Embodied Intensities</a></li>
+                            <li><a href="chapterone-partfour.html">Chapter 1.4: Calling for More Creator Stories: Toward Game Devs and Comics Creators</a></li>
+                            <li><a href="chapterone-ephemera.html">Ephemera: Chapter One</a></li>
                             <li><a href="chaptertwo.html"><i class="fas fa-file-audio"></i>Chapter 2: Feeling Feedback: Stories of Live-Streaming and Starting 100 Days of Writing</a></li>
-							<li><a href="chaptertwo_parttwo.html"><i class="fas fa-file-audio"></i>Chapter 2.2: Twitching in the Present Moment</a></li>
-        				    <li><a href="chaptertwo_partthree.html"><i class="fas fa-file-audio"></i>Chapter 2.3: Turning to Stories of Real-Time Creators</a></li>
-                            <li><a href="chaptertwo_partfour.html">Chapter 2.4: Streaming Bad Affects</a></li>
-                            <li><a href="chaptertwo_partfive.html">Chapter 2.5: Should Writing Studies Live Stream? The Start of the ‘100 Days of Writing’ Project</a></li>
-                            <li><a href="chaptertwo_ephemera.html">Ephemera: Chapter Two</a></li>
+							<li><a href="chaptertwo-parttwo.html"><i class="fas fa-file-audio"></i>Chapter 2.2: Twitching in the Present Moment</a></li>
+        				    <li><a href="chaptertwo-partthree.html"><i class="fas fa-file-audio"></i>Chapter 2.3: Turning to Stories of Real-Time Creators</a></li>
+                            <li><a href="chaptertwo-partfour.html">Chapter 2.4: Streaming Bad Affects</a></li>
+                            <li><a href="chaptertwo-partfive.html">Chapter 2.5: Should Writing Studies Live Stream? The Start of the ‘100 Days of Writing’ Project</a></li>
+                            <li><a href="chaptertwo-ephemera.html">Ephemera: Chapter Two</a></li>
                             <li><a href="#">Chapter 3</a></li>
 							<li><a href="#">Chapter 3.2</a></li>
                             <li><a href="#">Ephemera: Chapter</a></li>
@@ -75,7 +75,7 @@
 <h3>Ephemera Table of Contents</h3>
     <ul class="links">
 							<li><a href="index.html">Overview</a></li>
-   <li><a href="chapterone_ephemera.html">Ephemera: Chapter One</a></li>
+   <li><a href="chapterone-ephemera.html">Ephemera: Chapter One</a></li>
                             <li><a href="generic.html">Ephemera: Chapter Two</a></li>
                             <li><a href="#">Ephemera: Chapter Three</a></li>
                             <li><a href="#">Ephemera: Chapter Four</a></li>
@@ -120,7 +120,7 @@
 	<span class="date">Overview</span>
 										<h2><a href="#">Navigating <br>This Book</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="media/pexels-soumil-kumar-735911.jpg" alt="Photo of person typing on computer keyboard" width="508" height="310" /></a>
+									<a href="#" class="image fit"><img src="media/ADD" alt=""  width="508" height="310" /></a>
 									<p>This brief section includes a video on how to navigate the chapters and media in the book.</p>
 									<ul class="actions special">
 										<li><a href="ADD" class="button">Read the Section</a></li>
@@ -131,7 +131,7 @@
                                         	<span class="date">Introduction</span>
 										<h2><a href="chapterone.html">Rhetorical-Affective Practices Now</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="media/pexels-sora-shimazaki-5926389.jpg" width="508" height="310"alt="Cropped photo of unrecognizable developer using laptop and smartphone" /></a>
+									<a href="#" class="image fit"><img src="media/pexels-soumil-kumar-735911.jpg"  width="508" height="310"alt="Photo of person typing on computer keyboard" /></a>
 									<p>This chapter discusses the exigencies of Feeling Digital Media and introduces theories and stories in the book. </p>
 									<ul class="actions special">
 										<li><a href="introduction.html" class="button">Read the Introduction</a><br><br><a href="introduction.html" class="button">Part Two of the Intro</a></li>
@@ -154,7 +154,7 @@
 	<span class="date">Chapter Two</span>
 										<h2><a href="#">Living <br>Collaboration</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="media/pexels-soumil-kumar-735911.jpg" alt="Photo of person typing on computer keyboard" width="508" height="310" /></a>
+									<a href="#" class="image fit"><img src="X" alt="x" width="508" height="310" /></a>
 								 <p>This chapter centres on the significance of bodies in proximity, whether with collaborators in physical work spaces or digital communication channels. </p>
 									<ul class="actions special">
 										<li><a href="chaptertwo.html" class="button">Read the Chapter</a></li>
